2017-02-20 16:10 Lombok 적용 직후

--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry exported="true" kind="lib" path="C:/Users/hb2000/Downloads/colors/plugins/cz.wz.milanl.colors_0.0.2.jar"/>
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/hb2000/eclipse/lombok.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
